--- a/res/menu/action_bar_menu.xml
+++ b/res/menu/action_bar_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
- 	<item android:id="@+id/scan_action" android:showAsAction="always" android:title="@string/scan_label"></item>
-    <item android:id="@+id/stop_action" android:showAsAction="always" android:title="@string/stop_label"></item>
+ 	<item android:id="@+id/scan_action" android:showAsAction="ifRoom" android:title="@string/scan_label"></item>
+    <item android:id="@+id/stop_action" android:showAsAction="ifRoom" android:title="@string/stop_label"></item>
 </menu>
