Working on landscape and portrait views

--- a/res/layout/ip_info_bar2.xml
+++ b/res/layout/ip_info_bar2.xml
@@ -1,94 +1,82 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/row1"
-		android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/black"
-		android:orientation="horizontal"
-		android:paddingLeft="40dp">
-		
-		    <TextView
-				android:id="@+id/ihl"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="@string/ihl_label"
-				android:layout_marginLeft="25dp"
-				/>
-				
-		    <EditText
-				android:id="@+id/iph_ihl"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:hint="@string/zero_hint"
-				android:layout_marginLeft="10dp"
-				android:inputType="number"
-				/>
-		
-       <TextView
-        android:id="@+id/version"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/version_label"
-        android:layout_marginLeft="25dp"
-        />
-        
-        <EditText
-        android:id="@+id/iph_version"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="@string/zero_hint"
-        android:layout_marginLeft="10dp"
-        android:inputType="number"
-        />
-    
-        <TextView
-        android:id="@+id/tos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/tos_label"
-        android:layout_marginLeft="25dp"
-        />
-        
-        <EditText
-        android:id="@+id/iph_tos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="@string/zero_hint"
-        android:layout_marginLeft="10dp"
-        android:inputType="number"
-        />
-        
-        <TextView
-        android:id="@+id/ttl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ttl_label"
-        android:layout_marginLeft="25dp"
-        />
-        
-       <EditText
-        android:id="@+id/iph_ttl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="@string/zero_hint"
-        android:layout_marginLeft="10dp"
-        android:inputType="number"
-        />
+    android:orientation="horizontal"
+    android:paddingLeft="10dp">
        
         <TextView
         android:id="@+id/protocol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/protocol_label"
-        android:layout_marginLeft="25dp"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="5dp"
         />
         
        <EditText
         android:id="@+id/iph_protocol"
+        android:layout_width="75dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/zero_hint"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="10dp"
+        android:inputType="number"
+        />    
+        <TextView
+        android:id="@+id/tot_len"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tot_len_label"
+        android:layout_marginLeft="10dp"
+        />
+        
+        <EditText
+        android:id="@+id/iph_tot_len"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
+        android:layout_gravity="bottom"
         android:layout_marginLeft="10dp"
         android:inputType="number"
         />
     
+       <TextView
+        android:id="@+id/id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/id_label"
+        android:layout_marginLeft="15dp"
+        />
+        
+        <EditText
+        android:id="@+id/iph_frag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/zero_hint"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="10dp"
+        android:inputType="number"
+        />
+    
+        <TextView
+        android:id="@+id/check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/check_label"
+        android:layout_marginLeft="15dp"
+        />
+        
+        <EditText
+        android:id="@+id/iph_check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/zero_hint"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="10dp"
+        android:inputType="number"
+        />
+       
+
 </LinearLayout>
