Working on Packet Info layouts

--- a/res/layout-large/ip_info.xml
+++ b/res/layout-large/ip_info.xml
@@ -2,24 +2,13 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/rounded_rectangle_drawable"
-    android:orientation="vertical">
+    android:orientation="vertical" >
 		
 		<include
 		    android:id="@+id/ip_row1"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-		    layout="@layout/ip_info_bar1" />
+		    layout="@layout/ip_info_bar" />
 
-    <include
-        android:id="@+id/ip_row2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/ip_info_bar2" />
-
-    <include
-        android:id="@+id/ip_row3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/ip_info_bar3" />
-
+    
 </LinearLayout>
