--- a/res/drawable/rounded_rectangle_drawable.xml
+++ b/res/drawable/rounded_rectangle_drawable.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 android:shape="rectangle" >
-
-<solid android:color="#F5F6F7" />
-<corners
-    android:bottomLeftRadius="8dp"
-    android:bottomRightRadius="8dp"
-    android:topLeftRadius="8dp"
-    android:topRightRadius="8dp" /></shape>
+	<solid android:color="@color/ghost_purple" />
+	<stroke
+	      android:width="2dp"
+	      android:color="@android:color/black"
+	      />
+	<corners
+	    android:bottomLeftRadius="8dp"
+	    android:bottomRightRadius="8dp"
+	    android:topLeftRadius="8dp"
+	    android:topRightRadius="8dp" />
+</shape>
