--- a/res/layout-land/ip_info_bar.xml
+++ b/res/layout-land/ip_info_bar.xml
@@ -26,7 +26,6 @@
 				android:hint="@string/zero_hint"
 				android:layout_gravity="top"
 				android:layout_alignParentLeft="true"
-				android:layout_alignLeft="@+id/ihl"
 				android:layout_below="@+id/ihl"
         android:layout_marginTop="10dp"
 				android:inputType="number"
@@ -131,15 +130,17 @@
         android:layout_marginTop="10dp"
         android:inputType="number"
         />
-        <!--     
+            
         <TextView
         android:id="@+id/tot_len"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/tot_len_label"
         android:layout_gravity="bottom"
-        android:layout_below="@+id/iph_ihl"
-        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/protocol"
+						android:layout_marginTop="2dp"
+						android:layout_marginLeft="10dp"
+						android:layout_marginRight="10dp"
         />
         
         <EditText
@@ -148,8 +149,10 @@
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
         android:layout_gravity="bottom"
-        android:layout_below="@+id/tot_len"
-        android:layout_marginLeft="10dp"
+				android:layout_toRightOf="@+id/iph_id"
+				android:layout_below="@+id/tot_len"
+				android:layout_alignLeft="@+id/tot_len"
+        android:layout_marginTop="10dp"
         android:inputType="number"
         />
     
@@ -159,8 +162,10 @@
         android:layout_height="wrap_content"
         android:text="@string/id_label"
         android:layout_gravity="bottom"
-        android:layout_below="@+id/iph_version"
-        android:layout_marginLeft="15dp"
+        android:layout_toRightOf="@+id/protocol"
+					 android:layout_marginTop="2dp"
+					 android:layout_marginLeft="10dp"
+					 android:layout_marginRight="10dp"
         />
        
         <EditText
@@ -169,19 +174,22 @@
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
         android:layout_gravity="bottom"
-        android:layout_below="@+id/id"
-        android:layout_marginLeft="10dp"
+				android:layout_below="@+id/id"
+        android:layout_toRightOf="@+id/iph_tot_len"
+        android:layout_marginTop="10dp"
         android:inputType="number"
         />
         
         <TextView
-        android:id="@+id/id"
+        android:id="@+id/frag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/id_label"
+        android:text="@string/frag_label"
         android:layout_gravity="bottom"
-        android:layout_below="@+id/iph_tos"
-        android:layout_marginLeft="15dp"
+        android:layout_toRightOf="@+id/id"
+						android:layout_marginTop="2dp"
+						android:layout_marginLeft="10dp"
+						android:layout_marginRight="10dp"
         />
                
         <EditText
@@ -190,7 +198,9 @@
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
         android:layout_gravity="bottom"
-        android:layout_below="@+/id"
+				android:layout_toRightOf="@+id/iph_id"
+				android:layout_alignLeft="@+id/frag"
+        android:layout_below="@+id/frag"
         android:layout_marginLeft="10dp"
         android:inputType="number"
         />
@@ -200,9 +210,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_below="@+id/iph_ttl"
+        android:layout_toRightOf="@+id/iph_frag"
         android:text="@string/check_label"
-        android:layout_marginLeft="15dp"
+						android:layout_marginTop="2dp"
+						android:layout_marginLeft="10dp"
+						android:layout_marginRight="10dp"
         />
         
         <EditText
@@ -211,7 +223,9 @@
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
         android:layout_gravity="bottom"
-        andorid:layout_below="@+id/check"
+				android:layout_toRightOf="@+id/iph_frag"
+				android:layout_alignLeft="@+id/check"
+        android:layout_below="@+id/check"
         android:layout_marginLeft="10dp"
         android:inputType="number"
         />
@@ -221,9 +235,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_below="@+id/iph_tot_len"
+				android:layout_alignLeft="@+id/iph_ihl"
+        android:layout_below="@+id/iph_ihl"
         android:text="@string/saddr_label"
-        android:layout_marginLeft="15dp"
+						android:layout_marginTop="2dp"
+						android:layout_marginLeft="10dp"
+						android:layout_marginRight="10dp"
         />
         
        <EditText
@@ -232,6 +249,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
         android:layout_gravity="top"
+				android:layout_alignLeft="@+id/saddr"
         android:layout_below="@+id/saddr"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
@@ -243,9 +261,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+				android:layout_alignLeft="@+id/iph_saddr"
         android:layout_below="@+id/iph_saddr"
         android:text="@string/daddr_label"
-        android:layout_marginLeft="15dp"
+						android:layout_marginTop="2dp"
+						android:layout_marginLeft="10dp"
+						android:layout_marginRight="10dp"
         />
         
        <EditText
@@ -254,11 +275,11 @@
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
         android:layout_gravity="top"
-        android:layout_below="@+id/daddr"
+				android:layout_alignLeft="@+id/saddr"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:inputType="number"
         />
-       -->
+       
 
 </RelativeLayout>
