--- a/res/layout-land/ip_info.xml
+++ b/res/layout-land/ip_info.xml
@@ -8,18 +8,8 @@
 		    android:id="@+id/ip_row1"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-		    layout="@layout/ip_info_bar" />
+		    layout="@layout/ip_info_bar" 
+		 />
 
-    <include
-        android:id="@+id/ip_row2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/ip_info_bar2" />
-
-    <include
-        android:id="@+id/ip_row3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/ip_info_bar3" />
 
 </LinearLayout>
