Wrote onSave and fillDatagamBundle for PacketInfoActivity.
Added the onSave Bundle from PacketActivity to the primary activity's
savedInstanceState Bundle to pass data back and forth.

--- a/res/layout-land/ip_info.xml
+++ b/res/layout-land/ip_info.xml
@@ -8,7 +8,7 @@
 		    android:id="@+id/ip_row1"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-		    layout="@layout/ip_info_bar" 
+		    layout="@layout/ip_info_box" 
 		 />
 
 
