--- a/res/layout/ip_info_box.xml
+++ b/res/layout/ip_info_box.xml
@@ -12,22 +12,24 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="@string/ihl_label"
-        android:layout_gravity="bottom" 
+        android:layout_gravity="bottom"
+        android:layout_alignParentLeft="true"
 				android:layout_marginTop="2dp"
-				android:layout_marginLeft="12dp"
-				android:layout_marginRight="12dp"
+				android:layout_marginLeft="10dp"
+				android:layout_marginRight="10dp"
 				/>
 				
 		    <EditText
 				android:id="@+id/iph_ihl"
-				android:layout_width="60dp"
+				android:layout_width="50dp"
 				android:layout_height="wrap_content"
-				android:background="@drawable/border_drawable"
 				android:hint="@string/zero_hint"
-				android:layout_gravity="bottom" 
+				android:layout_gravity="top"
+				android:layout_alignParentLeft="true"
 				android:layout_alignLeft="@+id/ihl"
 				android:layout_below="@+id/ihl"
         android:layout_marginTop="10dp"
+        android:imeOptions="actionNext"
 				android:inputType="number"
 				/>
 		
@@ -35,25 +37,25 @@
         android:id="@+id/version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/version_label"        
+        android:text="@string/version_label"
         android:layout_gravity="bottom"
         android:layout_toRightOf="@+id/ihl"
         android:layout_marginTop="2dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         />
         
         <EditText
         android:id="@+id/iph_version"
-        android:layout_width="60dp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
-        android:background="@drawable/border_drawable"
         android:layout_gravity="top"
         android:layout_alignLeft="@+id/version"
         android:layout_toRightOf="@+id/iph_ihl"
         android:layout_below="@+id/version"
         android:layout_marginTop="10dp"
+        android:imeOptions="actionNext"
         android:inputType="number"
         />
     
@@ -65,21 +67,21 @@
         android:layout_gravity="bottom"
         android:layout_toRightOf="@+id/version"
         android:layout_marginTop="2dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         />
         
         <EditText
         android:id="@+id/iph_tos"
-        android:layout_width="60dp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
-        android:background="@drawable/border_drawable"
         android:layout_gravity="top"
         android:layout_alignLeft="@+id/tos"
         android:layout_toRightOf="@+id/iph_version"
         android:layout_below="@+id/tos"
         android:layout_marginTop="10dp"
+        android:imeOptions="actionNext"
         android:inputType="number"
         />
         
@@ -91,22 +93,22 @@
         android:layout_gravity="bottom"
         android:layout_toRightOf="@+id/tos"
         android:layout_marginTop="2dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         />
         
        <EditText
         android:id="@+id/iph_ttl"
-        android:layout_width="60dp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
-        android:background="@drawable/border_drawable"
         android:layout_gravity="top"
         android:layout_alignLeft="@+id/ttl"
         android:layout_toRightOf="@+id/iph_tos"
         android:layout_below="@+id/ttl"
         android:layout_marginTop="10dp"
-         android:inputType="number"
+        android:imeOptions="actionNext"
+        android:inputType="number"
         />
        
        <TextView
@@ -117,13 +119,13 @@
         android:layout_gravity="bottom"
         android:layout_toRightOf="@+id/ttl"
         android:layout_marginTop="2dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         />
         
        <EditText
         android:id="@+id/iph_protocol"
-        android:layout_width="60dp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
         android:layout_gravity="top"
@@ -131,6 +133,7 @@
         android:layout_toRightOf="@+id/iph_ttl"
         android:layout_below="@+id/protocol"
         android:layout_marginTop="10dp"
+        android:imeOptions="actionNext"
         android:inputType="number"
         />
             
@@ -140,22 +143,23 @@
         android:layout_height="wrap_content"
         android:text="@string/tot_len_label"
         android:layout_gravity="bottom"
-        android:layout_toRightOf="@+id/protocol"
-				android:layout_marginTop="2dp"
-				android:layout_marginLeft="12dp"
-				android:layout_marginRight="12dp"
-        />
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/iph_ihl"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"        />
         
         <EditText
         android:id="@+id/iph_tot_len"
-        android:layout_width="60dp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
         android:layout_gravity="bottom"
-				android:layout_toRightOf="@+id/iph_protocol"
-				android:layout_below="@+id/tot_len"
-				android:layout_alignLeft="@+id/tot_len"
+        android:layout_alignParentLeft="true"
+        android:layout_alignLeft="@+id/tot_len"
+        android:layout_below="@+id/tot_len" 
         android:layout_marginTop="10dp"
+        android:imeOptions="actionNext"
         android:inputType="number"
         />
     
@@ -165,22 +169,23 @@
         android:layout_height="wrap_content"
         android:text="@string/id_label"
         android:layout_gravity="bottom"
-        android:layout_toRightOf="@+id/tot_len"
-				android:layout_marginTop="2dp"
-				android:layout_marginLeft="12dp"
-				android:layout_marginRight="12dp"
-        />
+        android:layout_alignLeft="@+id/iph_version"
+        android:layout_below="@+id/iph_version"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"        />
        
         <EditText
         android:id="@+id/iph_id"
-        android:layout_width="60dp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
         android:layout_gravity="bottom"
         android:layout_alignLeft="@+id/id"
-				android:layout_below="@+id/id"
+        android:layout_below="@+id/id"
         android:layout_toRightOf="@+id/iph_tot_len"
         android:layout_marginTop="10dp"
+        android:imeOptions="actionNext"
         android:inputType="number"
         />
         
@@ -190,81 +195,88 @@
         android:layout_height="wrap_content"
         android:text="@string/frag_label"
         android:layout_gravity="bottom"
+        android:layout_alignLeft="@+id/iph_tos"
+        android:layout_below="@+id/iph_tos"
         android:layout_toRightOf="@+id/id"
-				android:layout_marginTop="2dp"
-				android:layout_marginLeft="12dp"
-				android:layout_marginRight="12dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         />
-    
+               
         <EditText
         android:id="@+id/iph_frag"
-        android:layout_width="60dp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/iph_id"
-        android:layout_alignBottom="@+id/iph_id"
-        android:layout_alignLeft="@+id/frag"
-        android:ems="10"
         android:hint="@string/zero_hint"
-        android:inputType="number" 
+        android:layout_gravity="bottom"
+        android:layout_alignLeft="@+id/frag"
+        android:layout_below="@+id/frag"
+        android:layout_toRightOf="@+id/iph_id"
+        android:layout_marginTop="10dp"
+        android:imeOptions="actionNext"
+        android:inputType="number"
         />
-        
+    
         <TextView
-        android:id="@+id/check"
+        android:id="@+id/ip_check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_toRightOf="@+id/iph_frag"
+        android:layout_alignLeft="@+id/iph_protocol"
+        android:layout_below="@+id/iph_protocol"
         android:text="@string/check_label"
-				android:layout_marginTop="2dp"
-				android:layout_marginLeft="12dp"
-				android:layout_marginRight="12dp"
-        />
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"        />
         
         <EditText
         android:id="@+id/iph_check"
-        android:layout_width="60dp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/iph_frag"
-        android:layout_alignBottom="@+id/iph_frag"
-        android:layout_alignLeft="@+id/check"
-        android:ems="10"
         android:hint="@string/zero_hint"
-        android:inputType="number" 
+        android:layout_gravity="bottom"
+        android:layout_alignLeft="@+id/iph_check"
+        android:layout_below="@+id/iph_check"
+        android:layout_toRightOf="@+id/iph_frag"
+        android:layout_marginTop="10dp"
+        android:imeOptions="actionNext"
+        android:inputType="number"
         />
-                
-       <TextView
-       android:id="@+id/saddr"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_below="@+id/iph_check"
-       android:layout_alignLeft="@+id/ihl"
-       android:layout_marginLeft="10dp"
-       android:text="@string/saddr_label" 
-       />
-       
+        
+        <TextView
+        android:id="@+id/saddr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_below="@+id/iph_tot_len"
+        android:text="@string/saddr_label"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"        />
+        
        <EditText
         android:id="@+id/iph_saddr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
         android:layout_gravity="top"
-				android:layout_alignLeft="@+id/saddr"
         android:layout_below="@+id/saddr"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:imeOptions="actionNext" 
         android:inputType="number"
         />
-        
+       
         <TextView
         android:id="@+id/daddr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/saddr"
+        android:layout_gravity="bottom"
         android:layout_below="@+id/iph_saddr"
-        android:layout_marginTop="10dp"
-        android:text="@string/daddr_label" 
-        />
-       
+        android:text="@string/daddr_label"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"        />
+        
        <EditText
         android:id="@+id/iph_daddr"
         android:layout_width="match_parent"
@@ -272,14 +284,10 @@
         android:hint="@string/zero_hint"
         android:layout_gravity="top"
         android:layout_below="@+id/daddr"
-				android:layout_alignLeft="@+id/saddr"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:imeOptions="actionNext" 
         android:inputType="number"
         />
-
- 
-
-
+      
 
 </RelativeLayout>
