--- a/res/layout-land/ip_info_box.xml
+++ b/res/layout-land/ip_info_box.xml
@@ -12,20 +12,19 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="@string/ihl_label"
-        android:layout_gravity="bottom"
-        android:layout_alignParentLeft="true"
+        android:layout_gravity="bottom" 
 				android:layout_marginTop="2dp"
-				android:layout_marginLeft="10dp"
-				android:layout_marginRight="10dp"
+				android:layout_marginLeft="12dp"
+				android:layout_marginRight="12dp"
 				/>
 				
 		    <EditText
 				android:id="@+id/iph_ihl"
-				android:layout_width="50dp"
+				android:layout_width="60dp"
 				android:layout_height="wrap_content"
+				android:background="@drawable/border_drawable"
 				android:hint="@string/zero_hint"
-				android:layout_gravity="top"
-				android:layout_alignParentLeft="true"
+				android:layout_gravity="bottom" 
 				android:layout_alignLeft="@+id/ihl"
 				android:layout_below="@+id/ihl"
         android:layout_marginTop="10dp"
@@ -36,19 +35,20 @@
         android:id="@+id/version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/version_label"
+        android:text="@string/version_label"        
         android:layout_gravity="bottom"
         android:layout_toRightOf="@+id/ihl"
         android:layout_marginTop="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         />
         
         <EditText
         android:id="@+id/iph_version"
-        android:layout_width="50dp"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
+        android:background="@drawable/border_drawable"
         android:layout_gravity="top"
         android:layout_alignLeft="@+id/version"
         android:layout_toRightOf="@+id/iph_ihl"
@@ -65,15 +65,16 @@
         android:layout_gravity="bottom"
         android:layout_toRightOf="@+id/version"
         android:layout_marginTop="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         />
         
         <EditText
         android:id="@+id/iph_tos"
-        android:layout_width="50dp"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
+        android:background="@drawable/border_drawable"
         android:layout_gravity="top"
         android:layout_alignLeft="@+id/tos"
         android:layout_toRightOf="@+id/iph_version"
@@ -90,15 +91,16 @@
         android:layout_gravity="bottom"
         android:layout_toRightOf="@+id/tos"
         android:layout_marginTop="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         />
         
        <EditText
         android:id="@+id/iph_ttl"
-        android:layout_width="50dp"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
+        android:background="@drawable/border_drawable"
         android:layout_gravity="top"
         android:layout_alignLeft="@+id/ttl"
         android:layout_toRightOf="@+id/iph_tos"
@@ -115,13 +117,13 @@
         android:layout_gravity="bottom"
         android:layout_toRightOf="@+id/ttl"
         android:layout_marginTop="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         />
         
        <EditText
         android:id="@+id/iph_protocol"
-        android:layout_width="50dp"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
         android:layout_gravity="top"
@@ -138,21 +140,21 @@
         android:layout_height="wrap_content"
         android:text="@string/tot_len_label"
         android:layout_gravity="bottom"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/iph_ihl"
-        android:layout_marginTop="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"        />
+        android:layout_toRightOf="@+id/protocol"
+				android:layout_marginTop="2dp"
+				android:layout_marginLeft="12dp"
+				android:layout_marginRight="12dp"
+        />
         
         <EditText
         android:id="@+id/iph_tot_len"
-        android:layout_width="50dp"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
         android:layout_gravity="bottom"
-        android:layout_alignParentLeft="true"
-        android:layout_alignLeft="@+id/tot_len"
-        android:layout_below="@+id/tot_len" 
+				android:layout_toRightOf="@+id/iph_protocol"
+				android:layout_below="@+id/tot_len"
+				android:layout_alignLeft="@+id/tot_len"
         android:layout_marginTop="10dp"
         android:inputType="number"
         />
@@ -163,20 +165,20 @@
         android:layout_height="wrap_content"
         android:text="@string/id_label"
         android:layout_gravity="bottom"
-        android:layout_alignLeft="@+id/iph_version"
-        android:layout_below="@+id/iph_version"
-        android:layout_marginTop="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"        />
+        android:layout_toRightOf="@+id/tot_len"
+				android:layout_marginTop="2dp"
+				android:layout_marginLeft="12dp"
+				android:layout_marginRight="12dp"
+        />
        
         <EditText
         android:id="@+id/iph_id"
-        android:layout_width="50dp"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
         android:layout_gravity="bottom"
         android:layout_alignLeft="@+id/id"
-        android:layout_below="@+id/id"
+				android:layout_below="@+id/id"
         android:layout_toRightOf="@+id/iph_tot_len"
         android:layout_marginTop="10dp"
         android:inputType="number"
@@ -188,85 +190,81 @@
         android:layout_height="wrap_content"
         android:text="@string/frag_label"
         android:layout_gravity="bottom"
-        android:layout_alignLeft="@+id/iph_tos"
-        android:layout_below="@+id/iph_tos"
         android:layout_toRightOf="@+id/id"
-        android:layout_marginTop="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        />
-               
-        <EditText
-        android:id="@+id/iph_frag"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/zero_hint"
-        android:layout_gravity="bottom"
-        android:layout_alignLeft="@+id/frag"
-        android:layout_below="@+id/frag"
-        android:layout_toRightOf="@+id/iph_id"
-        android:layout_marginTop="10dp"
-        android:inputType="number"
+				android:layout_marginTop="2dp"
+				android:layout_marginLeft="12dp"
+				android:layout_marginRight="12dp"
         />
     
+        <EditText
+        android:id="@+id/iph_frag"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/iph_id"
+        android:layout_alignBottom="@+id/iph_id"
+        android:layout_alignLeft="@+id/frag"
+        android:ems="10"
+        android:hint="@string/zero_hint"
+        android:inputType="number" 
+        />
+        
         <TextView
-        android:id="@+id/check"
+        android:id="@+id/ip_check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_alignLeft="@+id/iph_protocol"
-        android:layout_below="@+id/iph_protocol"
+        android:layout_toRightOf="@+id/iph_frag"
         android:text="@string/check_label"
-        android:layout_marginTop="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"        />
+				android:layout_marginTop="2dp"
+				android:layout_marginLeft="12dp"
+				android:layout_marginRight="12dp"
+        />
         
         <EditText
         android:id="@+id/iph_check"
-        android:layout_width="50dp"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/iph_frag"
+        android:layout_alignBottom="@+id/iph_frag"
+        android:layout_alignLeft="@+id/ip_check"
+        android:ems="10"
         android:hint="@string/zero_hint"
-        android:layout_gravity="bottom"
-        android:layout_alignLeft="@+id/check"
-        android:layout_below="@+id/check"
-        android:layout_toRightOf="@+id/iph_frag"
-        android:layout_marginTop="10dp"
-        android:inputType="number"
+        android:inputType="number" 
         />
-        
-        <TextView
-        android:id="@+id/saddr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_below="@+id/iph_tot_len"
-        android:text="@string/saddr_label"
-        android:layout_marginTop="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"        />
-        
+                
+       <TextView
+       android:id="@+id/saddr"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_below="@+id/iph_check"
+       android:layout_alignLeft="@+id/ihl"
+       android:layout_marginLeft="10dp"
+       android:text="@string/saddr_label" 
+       />
+       
        <EditText
         android:id="@+id/iph_saddr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/zero_hint"
         android:layout_gravity="top"
+				android:layout_alignLeft="@+id/saddr"
         android:layout_below="@+id/saddr"
-        android:layout_marginTop="10dp" 
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:inputType="number"
         />
-       
+        
         <TextView
         android:id="@+id/daddr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_alignLeft="@+id/saddr"
         android:layout_below="@+id/iph_saddr"
-        android:text="@string/daddr_label"
-        android:layout_marginTop="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"        />
-        
+        android:layout_marginTop="10dp"
+        android:text="@string/daddr_label" 
+        />
+       
        <EditText
         android:id="@+id/iph_daddr"
         android:layout_width="match_parent"
@@ -274,9 +272,14 @@
         android:hint="@string/zero_hint"
         android:layout_gravity="top"
         android:layout_below="@+id/daddr"
-        android:layout_marginTop="10dp" 
+				android:layout_alignLeft="@+id/saddr"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:inputType="number"
         />
-      
+
+ 
+
+
 
 </RelativeLayout>
