--- a/res/layout-large/host_ports.xml
+++ b/res/layout-large/host_ports.xml
@@ -6,7 +6,7 @@
 
     <include
         android:id="@+id/include"
-        layout="@layout/inputbar" />
+        layout="@layout/input_bar" />
 
     <LinearLayout
         android:layout_width="match_parent"
